--- a/Web/Pages/_Layout.cshtml
+++ b/Web/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace PaymentJournal_Web.Pages
+@namespace PaymentJournal.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,8 +10,8 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="PaymentJournal_Web.styles.css" rel="stylesheet" />
     <link href="/css/all.css" rel="stylesheet">
+    <link href="PaymentJournal.Web.styles.css" rel="stylesheet" />
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
