--- a/Web/_Imports.razor
+++ b/Web/_Imports.razor
@@ -6,8 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using PaymentJournal_Web
-@using PaymentJournal_Web.Shared
-@using PaymentJournal_Web.Models
-@using PaymentJournal_Web.Pages.Components
+@using PaymentJournal.Web
+@using PaymentJournal.Web.Shared
+@using PaymentJournal.Web.Models
+@using PaymentJournal.Web.Pages.Components
 @using System
