--- a/PaymentJournal.Web/Shared/MainLayout.razor
+++ b/PaymentJournal.Web/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Finance Tracking</PageTitle>
+<PageTitle>Payment Journal</PageTitle>
 
 <div class="page">
     <div class="sidebar">
