--- a/PaymentJournal.Web/Pages/Components/Budget_View.razor.css
+++ b/PaymentJournal.Web/Pages/Components/Budget_View.razor.css
@@ -1,13 +1,11 @@
-﻿
-
-.green_text{
+﻿.green_text {
     color: green;
 }
 
-.red_text{
+.red_text {
     color: red;
 }
 
-.blue_text{
+.blue_text {
     color: blue;
 }
